--- a/styles.css
+++ b/styles.css
@@ -36,6 +36,7 @@
 }
 
 .row{
+    
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -72,11 +73,19 @@ button:hover{
 
 ul li{
     list-style: none;
+    background-color: rgba(114, 198, 251, 0.826);
+    border: solid rgba(0, 0, 0, 0.329);
+    border-radius: 40px;
     font-size: 17px;
     padding: 12px 8px 12px 50px;
     user-select: none;
     cursor: pointer;
     position: relative;
+}
+
+ul li:hover{
+    border: solid rgba(243, 90, 13, 0.904);
+    background-color: rgba(251, 169, 114, 0.619);
 }
 
 ul li::before{
